@@ -1,1 +1,1 @@
-See our wiki for information on contributing code: https://github.com/symless/synergy-core/wiki
+See our wiki for information on contributing code: https://github.com/symless/synergy/wiki
